# rstro

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  index.html  index.scss
.github/workflows/: deploy.yml  pr_check.yml
src/: app.rs  main.rs
src/components/: board.rs  home.rs  mod.rs  new.rs  post.rs  post_page.rs
src/utils/: api.rs  meta.rs  mod.rs  models.rs
